Fix Docker issues: remove obsolete version, build for ARM64 platform

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,8 @@ jobs:
     - name: Build Docker image
       run: |
         cd src
-        docker build -t ${{ steps.names.outputs.docker_image }} .
+        # Build for ARM64 platform (server architecture)
+        docker buildx build --platform linux/arm64 -t ${{ steps.names.outputs.docker_image }} --load .
         docker save ${{ steps.names.outputs.docker_image }} > ../docker-image.tar
         
     - name: Read deployment config
